# whatsapp_fastapi_clone

./: .gitignore  Dockerfile  README.md  admin.py  alembic.ini  base_crud.py  base_models.py  config.py  database.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 3e134ab31bc2_added_blacklist_tokens.py  5c11b22e404d_unique_validation_added_to_room_name.py  8f481a12dbdf_.py  d563ce0e5aab_initial_migration.py  fcc3886efbb5_initial_migration.py
chat/: crud.py  endpoints.py  exceptions.py  models.py  schemas.py
core/: base_crud.py  dependencies.py  exceptions.py  middleware.py  model_imports.py  websocket.py
static/css/: chat.css  main.css
static/js/: chat.js  main.js
templates/: chat.html  chats.html  reg_login.html
user/: crud.py  endpoints.py  exceptions.py  models.py  schemas.py  utils.py
